added links between html files

--- a/tutorials/01-html/2nd-tut-folder/index.html
+++ b/tutorials/01-html/2nd-tut-folder/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1> 2nd index.html HEADER</h1>
+    i am inside a folder !
+    <a href=".."> lets go back</a>
 </body>
 </html>
