--- a/tutorials/01-html/cool file.html
+++ b/tutorials/01-html/cool file.html
@@ -9,5 +9,7 @@
     <h1>
         TUTORIAL HEADER
     </h1>
+    <a href = "something-else.html">something else</a>
+    <a href = "2nd-tut-folder">2nd tutorial folder</a>
 </body>
 </html>
