--- a/tutorials/01-html/something-else.html
+++ b/tutorials/01-html/something-else.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1> SOMETHING ELSE HEADER</h1>
+    <a href = "cool file.html">cool file</a>
+    <a href = "2nd-tut-folder">2nd tutorial folder</a>
 </body>
 </html>
