--- a/tutorials/02-html/index.html
+++ b/tutorials/02-html/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Tut</title>
-    <meta name = "description" content = "tutorials blah blah">
+    <meta name="description" content="tutorials blah blah">
 </head>
+
 <body>
     <header>
         <h1>HTML FOR US BY US</h1>
@@ -16,69 +18,38 @@
                 <li><a href="#Owl">Owl</a></li>
             </ul>
         </nav>
+        <div>
+            <img src="images/owlcatdog.jpg" alt="Cute owl cat and dog drawings">
+        </div>
     </header>
     <main>
-        <section id = "Cat">
-            <h2>CAT</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
+        <section id="Cat">
+            <h2>CATS!</h2>
+            <input type="range" id="cats" name="cats" min="0" max="100">
+            <label for="cats">How much do you like cats?</label>
+            <p contenteditable="true">
+                <textarea rows="5" cols="50" placeholder="What do you think about cats?"></textarea>
             </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
+
+        </section>
+        <section id="Dog">
+            <h2>What about dogs?</h2>
+            <input type="range" id="dogs" name="dogs" min="0" max="100">
+            <label for="dogs">How much do you like dogs?</label>
+            <p contenteditable="true">
+                <textarea rows="5" cols="50" placeholder="What do you think about dogs?"></textarea>
             </p>
         </section>
-        <section id = "Dog">
-            <h2>dog</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-        </section>
-        <section id = "Owl">
-            <h2>owl</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nostrum nobis nemo, voluptatibus quidem tempora optio minus omnis? A inventore rerum atque, officiis beatae pariatur commodi autem minima? Delectus, laudantium?
+        <section id="Owl">
+            <h2>And owls too</h2>
+            <input type="range" id="owls" name="owls" min="0" max="100">
+            <label for="owls">How much do you like owls?</label>
+            <p contenteditable="true">
+                <textarea rows="5" cols="50" placeholder="What do you think about owls?"></textarea>
             </p>
         </section>
 
     </main>
 </body>
+
 </html>
