--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -2,52 +2,52 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add a relevant page title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Christina Truong, Tech Educator and Content Creator</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
+  <body class="home">
     <!-- //  INTRO  // -->
-    <header>
-      <!-- Start content edits below this line. -->
-      <h1>Your Name</h1>
-      <h2>Job title or tagline</h2>
+    <div class="content-wrapper">
+      <header>
+        <!-- Start content edits below this line. -->
+        <h1>Christina Truong</h1>
+        <h2>Tech Educator and Content Creator</h2>
 
-      <!-- End content edits here. -->
-    </header>
+        <!-- End content edits here. -->
+      </header>
 
-    <!-- //  ABOUT ME  // -->
-    <main>
-      <!-- Start content edits below this line. -->
-      <p>Add your "about me" summary here. Add more paragraphs or links as needed. Here is some dummy text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit ante.</p>
-      <p>To learn more about my work history, check out my <a href="resume.html"> resume</a>. Thanks for stopping by!</p>
+      <!-- //  ABOUT ME  // -->
+      <main>
+        <p>With over 15 years of experience as a front-end developer, I've had the opportunity to work on a wide range of projects and with many different organizations. I also enjoy sharing knowledge and helping others learn and grow in their careers through teaching. If you're interested in web development or just looking to brush up on your skills, check out my <a href="https://christinatruong.com/courses/" target="_blank">courses</a> or my YouTube series <a href="https://www.youtube.com/@madebychristina" target="_blank">Decoded by Christina</a>.</p>
 
-      <!-- End content edits here. -->
-    </main>
-
+        <p>To learn more about my work history, check out my <a href="resume.html"> resume</a>. Thanks for stopping by!</p>
+      </main>
+    </div>
     <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
     <footer>
-      <!-- Start content edits below this line. -->
-      <p>© 2023 by Your Name | <a href="mailto:email@example.com">email@example.com</a></p>
+      <p>© 2023 by Christina Truong |  <a href="mailto:email@example.com">email@example.com</a></p>
 
-      <!-- Add or remove any networks. -->
       <ul>
         <li>
-          <a href="#" target="_blank">Twitter</a>
+          <a href="https://www.youtube.com/@madebychristina" target="_blank"><img src="images/icon-logo-youtube.png" alt="My YouTube channel"></a>
         </li>
         <li>
-          <a href="#" target="_blank">LinkedIn</a>
+          <a href="https://ko-fi.com/christinatruong" target="_blank"><img src="images/icon-logo-ko-fi.png" alt="My Ko-Fi homepage"></a>
         </li>
         <li>
-          <a href="#" target="_blank">Facebook</a>
+          <a href="https://medium.com/@christinatruong" target="_blank"><img src="images/icon-logo-medium.png" alt="My Medium homepage"></a>
         </li>
         <li>
-          <a href="#" target="_blank">YouTube</a>
+          <a href="https://www.instagram.com/christina.is.online/" target="_blank"><img src="images/icon-logo-instagram.png" alt="My Instagram"></a>
         </li>
         <li>
-          <a href="#" target="_blank">Instagram</a>
+          <a href="https://ca.linkedin.com/in/christinatruong" target="_blank"><img src="images/icon-logo-linkedin.png" alt="My LinkedIn profile"></a>
+        </li>
+        <li>
+          <a href="https://twitter.com/christinatruong" target="_blank"><img src="images/icon-logo-twitter.png" alt="My Twitter profile"></a>
         </li>
       </ul>
-      <!-- End content edits here. -->
     </footer>
   </body>
 </html>
