--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christina Truong, Tech Educator and Content Creator</title>
+    <title>Joshua chin, Digital Media Artist</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="home">
@@ -11,15 +11,15 @@
     <div class="content-wrapper">
       <header>
         <!-- Start content edits below this line. -->
-        <h1>Christina Truong</h1>
-        <h2>Tech Educator and Content Creator</h2>
+        <h1>Joshua chin</h1>
+        <h2>Digital Media Artist </h2>
 
         <!-- End content edits here. -->
       </header>
 
       <!-- //  ABOUT ME  // -->
       <main>
-        <p>With over 15 years of experience as a front-end developer, I've had the opportunity to work on a wide range of projects and with many different organizations. I also enjoy sharing knowledge and helping others learn and grow in their careers through teaching. If you're interested in web development or just looking to brush up on your skills, check out my <a href="https://christinatruong.com/courses/" target="_blank">courses</a> or my YouTube series <a href="https://www.youtube.com/@madebychristina" target="_blank">Decoded by Christina</a>.</p>
+        <p>3 years experience in Digital Media Art and Design. </a>.</p>
 
         <p>To learn more about my work history, check out my <a href="resume.html"> resume</a>. Thanks for stopping by!</p>
       </main>
