--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -9,6 +9,7 @@
   <body class="home">
     <!-- //  INTRO  // -->
     <div class="content-wrapper">
+      <div class = "content-bg">
       <header>
         <!-- Start content edits below this line. -->
         <h1>Joshua chin</h1>
@@ -24,11 +25,12 @@
         <p>To learn more about my work history, check out my <a href="resume.html"> resume</a>. Thanks for stopping by!</p>
       </main>
     </div>
+    </div>
     <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
     <footer>
       <p>© 2023 by Christina Truong |  <a href="mailto:email@example.com">email@example.com</a></p>
 
-      <ul>
+      <ul class = "socials">
         <li>
           <a href="https://www.youtube.com/@madebychristina" target="_blank"><img src="images/icon-logo-youtube.png" alt="My YouTube channel"></a>
         </li>
