--- a/portfolio-site/resume.html
+++ b/portfolio-site/resume.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume | Joshua Chin, Digital Media Artist and Graphic Designer</title>
-  <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="resume">
   <!-- //  INTRO  // -->
   <header>
-    <h1>Joshua Chin</h1>
-    <h2>Digital Media Artist and Graphic Designer.</h2>
+    <div class="content-wrapper">
+      <h1>Joshua Chin</h1>
+      <h2>Digital Media Artist and Graphic Designer.</h2>
+    </div>
   </header>
-
-  <main>
+  <main class="content-wrapper">
     <!-- //  PROFILE  // -->
-    <section>
+    <section class="resume-section">
       <h2>Profile</h2>
       <p>I have done professional work with ios App design, creating many app page mockups in figma and building the
         screens. I have also done work in blender, have made a few web projects, and have experience with Adobe
@@ -27,9 +30,10 @@
     </section>
 
     <!-- //  PROJECTS  // -->
-    <section>
+    <section class="resume-section">
       <h2>Web Projects</h2>
-      <section>
+      <div class="project-wrapper">
+      <section class="project-item">
         <h3><a href="https://jchin11.github.io/project-2/" target="_blank">What do you want to do Today?</a>.</p>
         </h3>
         <img src="images/whatdoyouwanttodotodaybig1000.png" srcset="images/whatdoyouwanttodotodaybig1000.png"
@@ -37,14 +41,14 @@
         <p>Built from scratch Net art that highlights daily struggles of a college student through an interactive
           minigame</p>
       </section>
-      <section>
+      <section class="project-item">
         <h3><a href="https://kissmeimdying.itch.io/darkness-in-me" target="_blank">Darkness in Me</a>.</p>
         </h3>
         <img src="images/darknessinmebig1000.png" srcset="images/darknessinmebig1000.png"
           alt="List of course names and thumbnails">
         <p>Game prototype I worked on, specifically the art and animations</p>
       </section>
-      <section>
+      <section class="project-item">
         <h3><a href="https://jchin11.github.io/final-project/" target="_blank">Screenshot Backyard</a>.</p>
         </h3>
         <img src="images/screenshotgardenbig1000.png" srcset="images/screenshotgardenbig1000.png "
@@ -52,32 +56,36 @@
         <p>A website that contains images I unknowingly took from a video game that i have decided to archive. Also
           provides the ability for users to make their own archives.</p>
       </section>
-      <section>
+      <section class="project-item">
         <h3><a href="https://scorched.report/" target="_blank">Scorched Report</a>.</p>
         </h3>
         <img src="images/scorchedreportbig_1000.png" srcset="images/scorchedreportbig_1000.png"
           alt="The Wire Ipsum quote generator website">
         <p>Fanmade website for a game me and my friends enjoy. I did portions of the UI and headed the design process
         </p>
-      </section>
-            <section>
-        <h3><a href="https://joshchin22.wixsite.com/mysite target=" target="_blank">Wizard School</a>.</p>
-        </h3>
-        <img src="images/wizardschoolbig1000.png" srcset="images/wizardschoolbig1000.png"
-          alt="The Wire Ipsum quote generator website">
-        <p>Website I designed for a class project.
-        </p>
-      </section>
+      </section ">
+            <section class = " project-item">
+      <h3><a href="https://joshchin22.wixsite.com/mysite target=" target="_blank">Wizard School</a>.</p>
+      </h3>
+      <img src="images/wizardschoolbig1000.png" srcset="images/wizardschoolbig1000.png"
+        alt="The Wire Ipsum quote generator website">
+      <p>Website I designed for a class project.
+      </p>
+    </section>
+    </div>
     </section>
     <!-- //  WORK EXPERIENCE  // -->
-    <section>
+    <section class="resume-section">
       <!-- Start content edits below this line.  -->
       <h2>Work Experience</h2>
-      <section>
+      <section class = "work-item">
+        <div class="work-details">
         <h3>IOS App UI/UX Designer</h3>
         <p>Aspen Networks</p>
         <p>Sep 2025 - Present day</p>
         <p>"Pulse" Project</p>
+        </div>
+        <div class="work-summary">
         <p>Key contributions:</p>
         <ul>
           <li>Created page mockups in figma for every screen, designed them to fit iPhone 14 and 15.</li>
@@ -85,21 +93,22 @@
           <li>Coded each screen using SwiftUI, 10 total for project prototype.</li>
           <li>Created assets such as: logos, color packages, and custom assets like navigation bars/buttons.</li>
         </ul>
+        </div>
       </section>
     </section>
 
 
     <!-- //  EDUCATION & CERTIFICATIONS  // -->
-    <section>
+    <section class="resume-section">
       <!-- Start content edits below this line.  -->
       <h2>Education</h2>
-      <section>
+      <section class = "education-item">
         <h3>University of Calfornia Merced, 2021-2023</h3>
         <p>2 years of Computer Science and Engineering</p>
       </section>
-      <section>
+      <section class = "education-item">
         <h3>San Jose State University - San Jose, California, 2023 - Present</h3>
-        <p>2-3  years of Digital Media Art</p>
+        <p>2-3 years of Digital Media Art</p>
       </section>
     </section>
   </main>
@@ -107,9 +116,9 @@
 
   <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
   <footer>
-    <p>© 2023 by Christina Truong | <a href="mailto:email@example.com">email@example.com</a></p>
+    <p>Joshua chin | <a href="mailto:email@example.com">joshua.chin@sjsu.edu</a></p>
 
-    <ul>
+    <ul class="socials">
       <li>
         <a href="https://www.youtube.com/@madebychristina" target="_blank"><img src="images/icon-logo-youtube.png"
             alt="My YouTube channel"></a>
