--- a/tutorials/05-dom-imageeclicks/index.html
+++ b/tutorials/05-dom-imageeclicks/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <p id="page-title">the future is formless</p>
+        <p id="page-title"></p>
     </header>
     <main>
         <div class="images-container">
@@ -46,7 +46,7 @@
         </div>
         <div id="bg-container">
             <div id="bg">
-                <!-- you could add background images / text here -->
+                perfect background picture
                 <img src="images/bg-1500px.png" alt="future slack">
             </div>
         </div>
