--- a/portfolio-site - project 3/index.html
+++ b/portfolio-site - project 3/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="home">
+      <nav class="navbar">
+        <div class="logo">
+            <a href="#">Joshua Chin</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <div class="menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </nav>
     <!-- //  INTRO  // -->
     <div class="content-wrapper">
       <div class = "content-bg">
@@ -28,7 +44,7 @@
     </div>
     <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
     <footer>
-      <p>© 2023 by Christina Truong |  <a href="mailto:email@example.com">email@example.com</a></p>
+      <p>© 2025 Joshua Chin |  <a href="mailto:joshchin22@gmail.com">joshchin22@gmail.com</a></p>
 
       <ul class = "socials">
         <li>
@@ -52,4 +68,5 @@
       </ul>
     </footer>
   </body>
+  <script src="js/main.js"></script>
 </html>
