--- a/portfolio-site - project 3/projects.html
+++ b/portfolio-site - project 3/projects.html
@@ -46,44 +46,51 @@
     </section>
 
     <!-- //  PROJECTS  // -->
-    
+    <section class="resume-section">
+      <h2>Web Projects</h2>
+      <div class="project-wrapper">
+      <section class="project-item">
+        <h3><a href="https://jchin11.github.io/project-2/" target="_blank">What do you want to do Today?</a>.</p>
+        </h3>
+        <img src="images/whatdoyouwanttodotodaybig1000.png" srcset="images/whatdoyouwanttodotodaybig1000.png"
+          alt="Decoded by Christina YouTube video thumbnails">
+        <p>Built from scratch Net art that highlights daily struggles of a college student through an interactive
+          minigame</p>
+      </section>
+      <section class="project-item">
+        <h3><a href="https://kissmeimdying.itch.io/darkness-in-me" target="_blank">Darkness in Me</a>.</p>
+        </h3>
+        <img src="images/darknessinmebig1000.png" srcset="images/darknessinmebig1000.png"
+          alt="List of course names and thumbnails">
+        <p>Game prototype I worked on, specifically the art and animations</p>
+      </section>
+      <section class="project-item">
+        <h3><a href="https://jchin11.github.io/final-project/" target="_blank">Screenshot Backyard</a>.</p>
+        </h3>
+        <img src="images/screenshotgardenbig1000.png" srcset="images/screenshotgardenbig1000.png "
+          alt="The TROY podcast website homepage">
+        <p>A website that contains images I unknowingly took from a video game that i have decided to archive. Also
+          provides the ability for users to make their own archives.</p>
+      </section>
+      <section class="project-item">
+        <h3><a href="https://scorched.report/" target="_blank">Scorched Report</a>.</p>
+        </h3>
+        <img src="images/scorchedreportbig_1000.png" srcset="images/scorchedreportbig_1000.png"
+          alt="The Wire Ipsum quote generator website">
+        <p>Fanmade website for a game me and my friends enjoy. I did portions of the UI and headed the design process
+        </p>
+      </section ">
+            <section class = " project-item">
+      <h3><a href="https://joshchin22.wixsite.com/mysite target=" target="_blank">Wizard School</a>.</p>
+      </h3>
+      <img src="images/wizardschoolbig1000.png" srcset="images/wizardschoolbig1000.png"
+        alt="The Wire Ipsum quote generator website">
+      <p>Website I designed for a class project.
+      </p>
+    </section>
+    </div>
+    </section>
     <!-- //  WORK EXPERIENCE  // -->
-    <section class="resume-section">
-      <!-- Start content edits below this line.  -->
-      <h2>Work Experience</h2>
-      <section class = "work-item">
-        <div class="work-details">
-        <h3>IOS App UI/UX Designer</h3>
-        <p>Aspen Networks</p>
-        <p>Sep 2025 - Present day</p>
-        <p>"Pulse" Project</p>
-        </div>
-        <div class="work-summary">
-        <p>Key contributions:</p>
-        <ul>
-          <li>Created page mockups in figma for every screen, designed them to fit iPhone 14 and 15.</li>
-          <li>Imported all libraries required to replicate each screen in xCode.</li>
-          <li>Coded each screen using SwiftUI, 10 total for project prototype.</li>
-          <li>Created assets such as: logos, color packages, and custom assets like navigation bars/buttons.</li>
-        </ul>
-        </div>
-      </section>
-    </section>
-
-
-    <!-- //  EDUCATION & CERTIFICATIONS  // -->
-    <section class="resume-section">
-      <!-- Start content edits below this line.  -->
-      <h2>Education</h2>
-      <section class = "education-item">
-        <h3>University of Calfornia Merced, 2021-2023</h3>
-        <p>2 years of Computer Science and Engineering</p>
-      </section>
-      <section class = "education-item">
-        <h3>San Jose State University - San Jose, California, 2023 - Present</h3>
-        <p>2-3 years of Digital Media Art</p>
-      </section>
-    </section>
   </main>
 
 
