--- a/portfolio-site - project 3/index.html
+++ b/portfolio-site - project 3/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name = "description" content = "Joshua Chin is a graphic designer and digital media artist working in web design, app design, and bits of video editing.">
+    <meta name = "keywords" content = "Joshua chin, Digital Artist, graphic designer, app designer, video editor">
     <title>Joshua chin, Digital Media Artist</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
