--- a/portfolio-site - project 3/projects.html
+++ b/portfolio-site - project 3/projects.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name = "description" content = "Joshua Chin is a graphic designer and digital media artist working in web design, app design, and bits of video editing.">
+    <meta name = "keywords" content = "Joshua chin, Digital Artist, graphic designer, app designer, video editor">
   <title>Resume | Joshua Chin, Digital Media Artist and Graphic Designer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
