--- a/portfolio-site - project 3/index.html
+++ b/portfolio-site - project 3/index.html
@@ -1,74 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name = "description" content = "Joshua Chin is a graphic designer and digital media artist working in web design, app design, and bits of video editing.">
-    <meta name = "keywords" content = "Joshua chin, Digital Artist, graphic designer, app designer, video editor">
-    <title>Joshua chin, Digital Media Artist</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body class="home">
-      <nav class="navbar">
-        <div class="logo">
-            <a href="#">Joshua Chin</a>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="menu-toggle">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-    </nav>
-    <!-- //  INTRO  // -->
-    <div class="content-wrapper">
-      <div class = "content-bg">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Joshua Chin is a graphic designer and digital media artist working in web design, app design, and bits of video editing.">
+  <meta name="keywords" content="Joshua chin, Digital Artist, graphic designer, app designer, video editor">
+  <title>Joshua chin, Graphic Designer</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body class="home">
+  <nav class="navbar">
+    <div class="logo">
+      <a href="#">Joshua Chin - Graphic Designer</a>
+    </div>
+    <ul class="nav-links">
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="resume.html">Resume</a></li>
+    </ul>
+    <div class="menu-toggle">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+  </nav>
+  <!-- //  INTRO  // -->
+  <div class="content-wrapper">
+    <div class="content-bg">
       <header>
         <!-- Start content edits below this line. -->
         <h1>Joshua chin</h1>
-        <h2>Digital Media Artist </h2>
+        <h2>Graphic Designer and Digital Media Artist </h2>
 
         <!-- End content edits here. -->
       </header>
 
       <!-- //  ABOUT ME  // -->
       <main>
-        <p>3 years experience in Digital Media Art and Design. </a>.</p>
-
-        <p>To learn more about my work history, check out my <a href="resume.html"> resume</a>. Thanks for stopping by!</p>
+        <p>A collection of my web projects that demonstrate proficiency in web development and UI design.</p>
+        <p>Each work presented here represents my passion for a <a href="resume.html"> minimalistic</a> approach to
+          graphic design that maintains a subtle hint of aesthetic thought process.</p>
       </main>
     </div>
-    </div>
-    <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
-    <footer>
-      <p>© 2025 Joshua Chin |  <a href="mailto:joshchin22@gmail.com">joshchin22@gmail.com</a></p>
+  </div>
+  <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
+  <footer>
+    <p>© 2025 Joshua Chin | <a href="mailto:joshchin22@gmail.com">joshchin22@gmail.com</a></p>
 
-      <ul class = "socials">
-        <li>
-          <a href="https://www.youtube.com/@madebychristina" target="_blank"><img src="images/icon-logo-youtube.png" alt="My YouTube channel"></a>
-        </li>
-        <li>
-          <a href="https://ko-fi.com/christinatruong" target="_blank"><img src="images/icon-logo-ko-fi.png" alt="My Ko-Fi homepage"></a>
-        </li>
-        <li>
-          <a href="https://medium.com/@christinatruong" target="_blank"><img src="images/icon-logo-medium.png" alt="My Medium homepage"></a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/christina.is.online/" target="_blank"><img src="images/icon-logo-instagram.png" alt="My Instagram"></a>
-        </li>
-        <li>
-          <a href="https://ca.linkedin.com/in/christinatruong" target="_blank"><img src="images/icon-logo-linkedin.png" alt="My LinkedIn profile"></a>
-        </li>
-        <li>
-          <a href="https://twitter.com/christinatruong" target="_blank"><img src="images/icon-logo-twitter.png" alt="My Twitter profile"></a>
-        </li>
-      </ul>
-    </footer>
-  </body>
-  <script src="js/main.js"></script>
+    <ul class="socials">
+      <li>
+        <a href="https://www.youtube.com/@madebychristina" target="_blank"><img src="images/icon-logo-youtube.png"
+            alt="My YouTube channel"></a>
+      </li>
+      <li>
+        <a href="https://ko-fi.com/christinatruong" target="_blank"><img src="images/icon-logo-ko-fi.png"
+            alt="My Ko-Fi homepage"></a>
+      </li>
+      <li>
+        <a href="https://medium.com/@christinatruong" target="_blank"><img src="images/icon-logo-medium.png"
+            alt="My Medium homepage"></a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/christina.is.online/" target="_blank"><img
+            src="images/icon-logo-instagram.png" alt="My Instagram"></a>
+      </li>
+      <li>
+        <a href="https://ca.linkedin.com/in/christinatruong" target="_blank"><img src="images/icon-logo-linkedin.png"
+            alt="My LinkedIn profile"></a>
+      </li>
+      <li>
+        <a href="https://twitter.com/christinatruong" target="_blank"><img src="images/icon-logo-twitter.png"
+            alt="My Twitter profile"></a>
+      </li>
+    </ul>
+  </footer>
+</body>
+<script src="js/main.js"></script>
+
 </html>
