--- a/portfolio-site - project 3/projects.html
+++ b/portfolio-site - project 3/projects.html
@@ -6,22 +6,21 @@
       <meta name = "description" content = "Joshua Chin is a graphic designer and digital media artist working in web design, app design, and bits of video editing.">
     <meta name = "keywords" content = "Joshua chin, Digital Artist, graphic designer, app designer, video editor">
   <title>Resume | Joshua Chin, Digital Media Artist and Graphic Designer</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="resume">
         <nav class="navbar">
         <div class="logo">
-            <a href="#">Joshua Chin</a>
+            <a href="#">Joshua Chin Projects</a>
         </div>
         <ul class="nav-links">
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="#">Contact</a></li>
         </ul>
         <div class="menu-toggle">
             <span class="bar"></span>
@@ -90,7 +89,6 @@
       <p>Website I designed for a class project.
       </p>
     </section>
-    </div>
     </section>
     <!-- //  WORK EXPERIENCE  // -->
   </main>
@@ -128,5 +126,5 @@
     </ul>
   </footer>
 </body>
-
+  <script src="js/main.js"></script>
 </html>
