--- a/portfolio-site - project 3/resume.html
+++ b/portfolio-site - project 3/resume.html
@@ -6,22 +6,21 @@
       <meta name = "description" content = "Joshua Chin is a graphic designer and digital media artist working in web design, app design, and bits of video editing.">
     <meta name = "keywords" content = "Joshua chin, Digital Artist, graphic designer, app designer, video editor">
   <title>Resume | Joshua Chin, Digital Media Artist and Graphic Designer</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Open+Sans&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body class="resume">
         <nav class="navbar">
         <div class="logo">
-            <a href="#">Joshua Chin</a>
+            <a href="#">Joshua Chin Resume</a>
         </div>
         <ul class="nav-links">
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="#">Contact</a></li>
         </ul>
         <div class="menu-toggle">
             <span class="bar"></span>
@@ -67,6 +66,21 @@
           <li>Imported all libraries required to replicate each screen in xCode.</li>
           <li>Coded each screen using SwiftUI, 10 total for project prototype.</li>
           <li>Created assets such as: logos, color packages, and custom assets like navigation bars/buttons.</li>
+        </ul>
+        </div>
+      </section>
+            <section class = "work-item">
+        <div class="work-details">
+        <h3>Dishwashe/Linecook</h3>
+        <p>University of California Merced</p>
+        <p>Nov 2022 - May 2024</p>
+        </div>
+        <div class="work-summary">
+        <p>Key contributions:</p>
+        <ul>
+          <li>Learned proper kitchen protocol to handle food, dishes, freezer organization, and maintain cleanliness</li>
+          <li>Worked as a dishwasher and line cook to serve students during semester and summer sessions.</li>
+          <li>Gained food handling certificate.</li>
         </ul>
         </div>
       </section>
@@ -121,5 +135,5 @@
     </ul>
   </footer>
 </body>
-
+  <script src="js/main.js"></script>
 </html>
