integrated proj2 into home

--- a/portfolio-site - project 3/index.html
+++ b/portfolio-site - project 3/index.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="home">
@@ -50,6 +51,17 @@
       </main>
     </div>
   </div>
+    <main class="container">
+    <div class="header-box">
+      <h1 class="header-text">What do you want to do today?</h1>
+    </div>
+
+    <select class="dropdown">
+      <option disabled selected>I want to...</option>
+      <option>Be happy</option>
+    </select>
+    <div class="image-box"></div>
+  </main>
   <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
   <footer>
     <p>© 2025 Joshua Chin | <a href="mailto:joshchin22@gmail.com">joshchin22@gmail.com</a></p>
@@ -83,5 +95,6 @@
   </footer>
 </body>
 <script src="js/main.js"></script>
-
+<script src="js/dropdown.js"></script>
+<script src="js/icons.js"></script>
 </html>
