--- a/portfolio-site - project 3/index.html
+++ b/portfolio-site - project 3/index.html
@@ -47,7 +47,7 @@
       <main>
         <p>A collection of my web projects that demonstrate proficiency in web development and UI design.</p>
         <p>Each work presented here represents my passion for a <a href="resume.html"> minimalistic</a> approach to
-          graphic design that maintains a subtle hint of aesthetic thought process.</p>
+          graphic design that maintains a subtle hint of aesthetic thought process. Check out one of my works below!</p>
       </main>
     </div>
   </div>
